syntax = "proto3";

package suggestions;

service Suggestions {
    rpc BookSuggestions (SuggestionsRequest) returns (SuggestionsResponse) {}
}

message SuggestionsRequest {
    string title = 1;
    string author = 2;
}

message SuggestionsResponse {
    repeated string titles = 1;
}
